--- a/bmi/app/src/main/res/layout/activity_bmi_data.xml
+++ b/bmi/app/src/main/res/layout/activity_bmi_data.xml
@@ -25,4 +25,15 @@
         android:text="返回主頁"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/updata"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="181dp"
+        android:layout_marginLeft="181dp"
+        android:layout_marginTop="520dp"
+        android:text="更新"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
