--- a/bmi/app/src/main/res/layout/activity_count.xml
+++ b/bmi/app/src/main/res/layout/activity_count.xml
@@ -10,18 +10,20 @@
         android:id="@+id/b1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="312dp"
-        android:layout_marginLeft="312dp"
-        android:layout_marginTop="84dp"
         android:text="顯示折線圖"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/lc"
+        app:layout_constraintVertical_bias="0.17000002" />
 
     <TextView
         android:id="@+id/stext1"
         android:layout_width="291dp"
         android:layout_height="42dp"
-
+        android:textSize="15sp"
+        android:gravity="center"
         android:layout_marginTop="44dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,18 +32,18 @@
         android:id="@+id/stext2"
         android:layout_width="290dp"
         android:layout_height="39dp"
-
+        android:textSize="15sp"
+        android:gravity="center"
         android:layout_marginTop="92dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/back"
-        android:layout_width="93dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="312dp"
-        android:layout_marginLeft="312dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="304dp"
+        android:layout_marginTop="52dp"
         android:text="返回"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></Button>
@@ -50,13 +52,12 @@
         android:id="@+id/lc"
         android:layout_width="406dp"
         android:layout_height="400dp"
-        android:layout_marginTop="208dp"
+        android:layout_marginBottom="164dp"
         android:background="#FFEB3B"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent">
 
     </com.github.mikephil.charting.charts.LineChart>
 
@@ -64,11 +65,10 @@
         android:id="@+id/his"
         android:layout_width="149dp"
         android:layout_height="50dp"
-        android:layout_marginStart="260dp"
-        android:layout_marginLeft="260dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="20dp"
         android:text="前往看歷史紀錄"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/b1"
+        app:layout_constraintTop_toBottomOf="@+id/lc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
